<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/svFormularioCrear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/imgbtnCrear"
        android:layout_margin="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtvNumeroRiesgo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/numero_de_riesgo"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtvAgenteAmenaza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/agente_amenaza" />

            <EditText
                android:id="@+id/etxtAgenteAmenaza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" >
            </EditText>

            <TextView
                android:id="@+id/txtvAmenaza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/amenaza" />

            <EditText
                android:id="@+id/etxtAmenaza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/txtvVulnerabilidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/vulnerabilidad" />

            <EditText
                android:id="@+id/etxtVulnerabilidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/txtvImpacto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/impacto"
                android:textSize="15dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layout_impacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtvConfidencialidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/confidencialidad" />

                <Spinner
                    android:id="@+id/spConfidencialidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtvIntegridad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/integridad" />

                <Spinner
                    android:id="@+id/spIntegridad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtvDisponibilidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/disponibilidad" />

                <Spinner
                    android:id="@+id/spDisponibilidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtvProbabilidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/probabilidad"
                android:textSize="15dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layout_probabilidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtvAccesibilidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/accesibilidad" />

                <Spinner
                    android:id="@+id/spAccesibilidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtvHabilidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/habilidad" />

                <Spinner
                    android:id="@+id/spHabilidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtvRecursos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/recursos" />

                <Spinner
                    android:id="@+id/spRecursos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtvMotivacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/motivacion" />

                <Spinner
                    android:id="@+id/spMotivacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/imgbtnCrear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/content_desciption"
        android:onClick="crearRiesgo"
        android:src="@drawable/crear_mini" />

</RelativeLayout>