<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/svFormularioCrear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/imgbtnControlar"
        android:layout_margin="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtvImpacto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/impacto"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtvProbabilidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/probabilidad"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtvRiesgo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/riesgo"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtvEfectividadControl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/efectividad_control"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etxtEfectividadControl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:inputType="numberDecimal" >
            </EditText>

            <TextView
                android:id="@+id/txtvControl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/control"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtvDescripcionControl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/descripcion_control"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etxtDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:inputType="text"
                android:lines="3" >
            </EditText>

            <TextView
                android:id="@+id/txtvRiesgoResidual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/riesgo_residual"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/imgbtnControlar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/content_desciption"
        android:onClick="controlarRiesgo"
        android:src="@drawable/control_mini" />

</RelativeLayout>